<package>
  <name>asr_xsd2cpp</name>
  <version>1.0.0</version>
  <description>This package is used to generate C++ classes (headers) mapped to the components of an input XML Schema</description>
  <author>Meißner Pascal, Schleicher Ralf</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_xsd2cpp</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xsdcxx</run_depend>

</package>


